Attached patch includes these fixes:
1) use StrFormatByteSize function for printing disk sizes in the hibernate tab. This simplified the code and I could also remove duplicated strings from all resource files.
2) The icon of the applet is not visible in the property sheet. This happens because IDC_CPLICON_1 is not assigned to any valid existing icon. See attached screenshots for comparison.