[POWERCFG] Bug fix and improvements to PowerCfg applet by Carlo Bramini CORE-11801 #resolve #comment Committed, thx ^^

svn path=/trunk/; revision=72860